# rocket

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  flake.nix  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  release.yml  test.yml
designs/: connect.json  v0.1-color-variants.html  v0.1-mvp.html  v0.10-ai-basic.html  v0.11-ai-review.html  v0.12-ai-patch.html  v0.13-customization.html  v0.2-branch.html  v0.3-remote.html  v0.4-history.html  v0.5-hunk-staging.html  v0.6-line-staging.html  v0.7-stash-tag.html  v0.8-conflict.html  v0.9-merge-rebase.html  v1.x-extensions.html
designs/ai-assist/: index.html  styles.css
docs/: design-coverage.md  features.md  roadmap.md  testing.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auto_fetch.rs  lib.rs  state.rs  watcher.rs
src-tauri/src/ai/: adapter.rs  conflict.rs  detector.rs  mod.rs  pr.rs  prompt.rs  review.rs  types.rs
src-tauri/src/commands/: ai.rs  branch.rs  cherry_pick.rs  config.rs  conflict.rs  git.rs  gitconfig.rs  gitignore.rs  history.rs  hosting.rs  mod.rs  rebase.rs  remote.rs  repo.rs  reset.rs  revert.rs  search.rs  stash.rs  submodule.rs  tab.rs  tag.rs  worktree.rs
src-tauri/src/config/: mod.rs
src-tauri/src/git/: auth.rs  backend.rs  dispatcher.rs  error.rs  git2_backend.rs  mod.rs  search.rs  submodule.rs  types.rs  worktree.rs
src-tauri/src/hosting/: detector.rs  github.rs  mod.rs  types.rs
src-tauri/tests/: git2_backend_test.rs  tauri_commands_test.rs
(+290 files in other folders)
